fixed modal not covering entire screen

--- a/client/src/styles/Modal.module.css
+++ b/client/src/styles/Modal.module.css
@@ -13,9 +13,11 @@
     display: flex;
     height: 100%;
     justify-content: center;
+    left: 0;
     min-height: 100vh;
     position: fixed;
     text-align: center;
+    top: 0;
     width: 100%;
 }
 
